# Ghost-Engine

./: CMakeLists.txt  imgui.ini
assets/shaders/: shader.vert
build_release/: ALL_BUILD.vcxproj  CMakeCache.txt  Gh0stEngine.sln  Gh0stEngine.vcxproj  Gh0stEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_release/Done/: imgui.ini
build_release/Done/assets/shaders/: shader.vert  vert.spv
build_release/Gh0stEngine.dir/Release/: Gh0stEngine.exe.recipe
build_release/Gh0stEngine.dir/Release/Gh0stEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_release/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_release/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build_release/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_release/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.cpp
src/core/: Window.cpp  Window.h
src/graphics/: GameObject.h  Mesh.h  Vertex.h  VulkanRenderer.cpp  VulkanRenderer.h
